-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.4.2
-
None
-
-
87b7a9b73 (dev), fb9817741 (dev), 3d3e32447 (6.8)
6.3.2: drawing fine
6.4.2: the "pencil" feedback freezes on tablet press, and no drawing
6.5.0 beta: the same
dev branch: the same
- is required for
-
QTBUG-96915 document the Pointer Handlers example
-
- Closed
-
- relates to
-
QTBUG-103068 tst_PointHandler::tabletStylus() fails on Android
-
- Reported
-
-
QTBUG-88541 tst_qquickpointhander::tabletStylus doesn't work on hidpi
-
- Open
-
-
QTBUG-56479 Remove spontaneous move event from QGuiApplicationPrivate::processMouseEvent
-
- Reported
-
-
QTBUG-129794 QTest::mouseClick() and mouseDClick() don't actually apply the delay to each event in the sequence
-
- Closed
-
- resulted from
-
QTBUG-104890 PointHandler deactivated on touch screen
-
- Closed
-
- resulted in
-
QTBUG-129998 synthesis of mouse events after unaccepted QTabletEvents doesn't work on some platforms
-
- Reported
-
| For Gerrit Dashboard: QTBUG-111336 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 461683,12 | PointHandler: don't deactivate because of synth-mouse events | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 461997,15 | QGuiAppPriv::processMouseEvent: avoid spurious tablet double-clicks | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 596469,2 | PointHandler: don't deactivate because of synth-mouse events | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |