src/quick/handlers/qquicksinglepointhandler.cpp
@@ -3,6 +3,7 @@
 
 #include "qquicksinglepointhandler_p.h"
 #include "qquicksinglepointhandler_p_p.h"
+#include <private/qquickdeliveryagent_p_p.h>
 
 QT_BEGIN_NAMESPACE
 Q_DECLARE_LOGGING_CATEGORY(lcTouchTarget)
@@ -110,7 +111,8 @@ void QQuickSinglePointHandler::handlePointerEventImpl(QPointerEvent *event)
     QQuickPointerDeviceHandler::handlePointerEventImpl(event);
     QEventPoint *currentPoint = const_cast<QEventPoint *>(event->pointById(d->pointInfo.id()));
     Q_ASSERT(currentPoint);
-    d->pointInfo.reset(event, *currentPoint);
+    if (!QQuickDeliveryAgentPrivate::isSynthMouse(event))
+        d->pointInfo.reset(event, *currentPoint);
     handleEventPoint(event, *currentPoint);
     emit pointChanged();
 }
