tests/auto/quick/pointerhandlers/qquickpointhandler/tst_qquickpointhandler.cpp
@@ -35,6 +35,7 @@ private slots:
     void initTestCase() override;
 
     void singleTouch();
+    void tabletStylus_data();
     void tabletStylus();
     void simultaneousMultiTouch();
     void pressedMultipleButtons_data();
@@ -118,9 +119,19 @@ void tst_PointHandler::singleTouch()
     QCOMPARE(translationSpy.size(), 3);
 }
 
+void tst_PointHandler::tabletStylus_data()
+{
+    QTest::addColumn<bool>("guiSynthMouse");
+
+    QTest::newRow("nosynth") << false;
+    QTest::newRow("synth") << true;
+}
+
 void tst_PointHandler::tabletStylus()
 {
-    qApp->setAttribute(Qt::AA_SynthesizeMouseForUnhandledTabletEvents, false);
+    QFETCH(bool, guiSynthMouse);
+    qApp->setAttribute(Qt::AA_SynthesizeMouseForUnhandledTabletEvents, guiSynthMouse);
+
     QScopedPointer<QQuickView> windowPtr;
     createView(windowPtr, "pointTracker.qml");
     QQuickView * window = windowPtr.data();
@@ -142,7 +153,7 @@ void tst_PointHandler::tabletStylus()
         int(QInputDevice::DeviceType::Stylus), int(QPointingDevice::PointerType::Pen), Qt::LeftButton, 0.5, 25, 35, 0.6, 12.3, 3, stylusId, Qt::NoModifier);
     QTRY_COMPARE(handler->active(), true);
     QCOMPARE(activeSpy.size(), 1);
-    QCOMPARE(pointSpy.size(), 1);
+    QCOMPARE(pointSpy.size(), guiSynthMouse ? 3 : 1);
     QCOMPARE(handler->point().position().toPoint(), pointLocalDPI);
     QCOMPARE(handler->point().scenePosition().toPoint(), pointLocalDPI);
     QCOMPARE(handler->point().pressedButtons(), Qt::LeftButton);
@@ -150,14 +161,14 @@ void tst_PointHandler::tabletStylus()
     QCOMPARE(handler->point().rotation(), 12.3);
     QCOMPARE(handler->point().uniqueId().numericId(), stylusId);
     QCOMPARE(handler->translation(), QVector2D());
-    QCOMPARE(translationSpy.size(), 1);
+    QCOMPARE(translationSpy.size(), guiSynthMouse ? 3 : 1);
 
     QPoint delta(10, 10);
     QPoint deltaLocalDPI = QHighDpi::fromNativeLocalPosition(delta, window);
     point += delta;
     QWindowSystemInterface::handleTabletEvent(window, point, window->mapToGlobal(point),
         int(QInputDevice::DeviceType::Stylus), int(QPointingDevice::PointerType::Pen), Qt::LeftButton, 0.45, 23, 33, 0.57, 15.6, 3, stylusId, Qt::NoModifier);
-    QTRY_COMPARE(pointSpy.size(), 2);
+    QTRY_COMPARE(pointSpy.size(), guiSynthMouse ? 5 : 2);
     QCOMPARE(handler->active(), true);
     QCOMPARE(activeSpy.size(), 1);
     QCOMPARE(handler->point().position().toPoint(), pointLocalDPI + deltaLocalDPI);
@@ -171,15 +182,15 @@ void tst_PointHandler::tabletStylus()
     QCOMPARE_GT(handler->point().velocity().x(), 0);
     QCOMPARE_GT(handler->point().velocity().y(), 0);
     QCOMPARE(handler->translation(), QVector2D(deltaLocalDPI));
-    QCOMPARE(translationSpy.size(), 2);
+    QCOMPARE(translationSpy.size(), guiSynthMouse ? 5 : 2);
 
     QWindowSystemInterface::handleTabletEvent(window, point, window->mapToGlobal(point),
         int(QInputDevice::DeviceType::Stylus), int(QPointingDevice::PointerType::Pen), Qt::NoButton, 0, 0, 0, 0, 0, 0, stylusId, Qt::NoModifier);
     QTRY_COMPARE(handler->active(), false);
     QCOMPARE(activeSpy.size(), 2);
-    QCOMPARE(pointSpy.size(), 3);
+    QCOMPARE(pointSpy.size(), guiSynthMouse ? 6 : 3);
     QCOMPARE(handler->translation(), QVector2D());
-    QCOMPARE(translationSpy.size(), 3);
+    QCOMPARE(translationSpy.size(), guiSynthMouse ? 6 : 3);
 }
 
 void tst_PointHandler::simultaneousMultiTouch()
